--- a/renzohtml/index.html
+++ b/renzohtml/index.html
@@ -9,7 +9,7 @@
 		<title>Halcyonic by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/js/css/main.css" />
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -271,4 +271,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
