--- a/renzohtml/index.html
+++ b/renzohtml/index.html
@@ -21,7 +21,7 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">Halcyonic</a></h1>
+									<h1><a href="index.html" id="logo">JordsDan</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
@@ -273,3 +273,4 @@
 	</body>
 
 </html>
+
